# 2026-6304-4-

./: CLAUDE.md  Dockerfile.crash  EVENTS_HANDLING.md  LICENSE  QUICKSTART.md  README.md  TELEGRAM_BOT.md  alembic.ini  db.docker-compose.yaml  dev.docker-compose.yaml  funpay_bot.db  pyproject.toml
src/: README.md  alembic.ini  app.py  config.py  dependency.py  main.py  pyproject.toml  runtime.py
src/alembic/: README  env.py
src/alembic/versions/: 2026_04_28_9e514feaaa08_initial.py  2026_05_16_add_user_id_and_created_at_to_messages.py
src/database/: database.py  session.py
src/gateaway/: ai_api.py  chatgpt_api.py  funpay_api.py  login_user.py  telegram_bot.py
src/gateaway/telegram/: commands.py  telegram_bot.py
src/models/: __init__.py  api_polling.py  messages.py  user.py
src/repositories/: base_repository.py  messages.py  user.py
src/routes/: __init__.py  ai.py  authorization.py
src/schemas/: worker.py
src/schemas/ai/: ollama.py
src/schemas/auth/: auth.py
src/schemas/authorization/: auth_tg.py
src/schemas/funpay/: message.py
src/services/: send_message_service.py  task_manager.py  task_service.py
src/workers/: funpay_worker.py
