[project]
name = "MarketplaceBot"
version = "0.1.0"
description = ""
authors = [
    {name = "Lampower",email = "lampower.kirill@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
