[project]
name = "MarketplaceBot"
version = "0.1.0"
description = ""
authors = [
    {name = "Lampower",email = "lampower.kirill@gmail.com"}
]
requires-python = "3.14.3"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "funpayapi (>=1.1.0,<2.0.0)",
    "aiogram (>=3.27.0,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "uvicorn (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
